# mcp-commands

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hook_logger.py  pyproject.toml
dashboard/: index.html  nginx.conf
src/mcp_commands/: __init__.py  server.py  storage.py
