[project]
name = "mcp-commands"
version = "0.1.0"
description = "MCP server for tracking AI command usage"
readme = "README.md"
authors = [
    { name = "PuemMTH", email = "puem.mth@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
mcp-commands = "mcp_commands.server:main"

[dependency-groups]
dev = []
